// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case not found rendering 1`] = `
<div
  className="mn mn--full mn--nv-s"
>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          See all services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-d7jlfw": "",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        No results found
      </h2>
    </div>
    <div>
      <p
        className="t--info"
      >
        There is no case number matching “
        not-a-real-id
        ”.
      </p>
      <div
        className="stp css-38gbn5"
      >
        <span
          className="stp-number css-px1sz5"
        >
          1
        </span>
        <div
          className={null}
        >
          <form
            acceptCharset="UTF-8"
            action="/lookup"
            className="sf sf--y sf--md"
            method="get"
            onSubmit={[Function]}
          >
            <div
              className="sf-i"
            >
              <input
                className="sf-i-f"
                name="q"
                onInput={[Function]}
                placeholder="Search again…"
                type="text"
                value=""
              />
              <button
                className="sf-i-b"
              >
                Search
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        className="stp css-38gbn5"
      >
        <span
          className="stp-number css-lzdudf"
        >
          2
        </span>
        <span
          className="t--intro"
        >
          Our 311 operators are available 24/7 to help point you 
          <br />
          in the right direction. Call 
          <a
            href="tel:311"
          >
            311
          </a>
          , or 
          <a
            href="tel:+16176354500"
          >
            617-635-4500
          </a>
          .
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`case rendering 1`] = `
<div
  className="mn mn--full mn--nv-s"
>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          See all services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-d7jlfw": "",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        Case Search
      </h2>
    </div>
    <div
      className={
        Object {
          "data-css-1kcx6e8": "",
        }
      }
    >
      <h3
        className="t--intro m-v500"
      >
        Case Number: 
        <span
          className="t--number"
        >
          17-000000001
        </span>
      </h3>
      <hr
        className="hr hr--dash m-v300"
      />
      <div
        className="g"
      >
        <ul
          className="dl g--6"
        >
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Opened
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              March 7, 2017, 12:59 PM
            </span>
          </li>
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Where
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              City Hall Plaza, Boston, MA 02131
            </span>
          </li>
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Title
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              Cosmic Intervention
            </span>
          </li>
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Status
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              open
            </span>
          </li>
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Updated
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              April 8, 2017, 12:59 PM
            </span>
          </li>
        </ul>
        <ul
          className="dl g--6"
        >
          <li
            className="dl-i"
          >
            <span
              className="dl-t"
            >
              Description
            </span>
            <span
              className="dl-d dl-d--tt-n"
            >
              I think that Thanos is here
            </span>
          </li>
        </ul>
      </div>
      <div
        className="g m-v500"
      >
        <a
          className="g--3 ta-c btn btn--y"
          href="/lookup"
          onClick={[Function]}
        >
          Back to Search
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`search form rendering 1`] = `
<div
  className="mn mn--full mn--nv-s"
>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          See all services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className={
      Object {
        "data-css-18erp1v": "",
      }
    }
  >
    <form
      acceptCharset="UTF-8"
      action="/lookup"
      className="sf sf--y "
      method="get"
      onSubmit={[Function]}
    >
      <div
        className="sf-i"
      >
        <input
          className="sf-i-f"
          name="q"
          onInput={[Function]}
          placeholder="Search case ID…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
        >
          Search
        </button>
      </div>
    </form>
  </div>
</div>
`;
